<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hp.myapplication.MainActivity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/mrgTopLy"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"

            android:hint="@string/tvNombre"
            android:layout_height="wrap_content"
            android:id="@+id/etNombre"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvFecha"
            android:inputType="date"
            android:id="@+id/etFecha"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/tvTelefono"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:id="@+id/etTelefono"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/tvEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/tvDescripcion"
            android:id="@+id/etDescripcion"
            />
    </android.support.design.widget.TextInputLayout>
<RelativeLayout
    android:id="@+id/rlSiguiente"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:onClick="siguiente"
    >
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_vertical"
        android:layout_alignParentBottom="true"
        android:onClick="siguiente"
        android:text="@string/btnSiguiente" />
</RelativeLayout>



</LinearLayout>
