<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hp.myapplication.DetalleActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombre"
        android:textStyle="bold"
        android:textSize="@dimen/fontNombre"
        android:text="@string/tvNombre"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:onClick="llamar"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llFono"
        android:layout_marginTop="@dimen/mrgTopLy"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/fono"
            android:id="@+id/ivFono"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono"
            android:layout_marginLeft="@dimen/mrgLeftText"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/fontFono"
            android:text="@string/tvTelefono"/>
    </LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:id="@+id/llEmail"
    android:onClick="enviarMail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/email"
        android:id="@+id/ivEmail"/>
    <TextView
        android:layout_marginLeft="@dimen/mrgLeftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        android:text="@string/tvEmail"/>
</LinearLayout>
    <TextView
        android:layout_marginLeft="@dimen/mrgLeftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescripcion"
        android:text="@string/tvEmail"/>
    <RelativeLayout
        android:id="@+id/rlSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="siguiente"
        >
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:layout_alignParentBottom="true"
            android:onClick="editarUsuario"
            android:text="@string/btnEditar" />
    </RelativeLayout>
</LinearLayout>
